* Fixed replace_by_effect changing the active AI power mid-animation.
* Power tree backgrounds now align to the tab area if they are not the same size as the menu.
* Fixed potential crash if a hazard was created before the map loaded.
* Fixed infinite loop caused by trying to move an entity before the map loaded.
* Android: Fix 'Flare' directory not being automatically created.
* Android: Added a dialog to direct the player to the wiki page for installing if no game data is found.

Game updates:
* Limited the number of "unique" items that can drop from a boss to 1 per kill.

Translation updates:

* German (de) update (Iwan Gabovitch)
* Spanish (es) update (Jacobo Feijóo, Julvenzor, Eugenio Martínez Seguín)
* Finnish (fi) update (Jaakko Muilu)
* Scottish Gaelic (gd) update (GunChleoc)
* Hindi (India) (hi_IN) by Ansh Mishra
* Korean (ko) update (ks k)
* Polish (pl) update (Marcin Serwin)
* Russian (ru) update (berry)
* Swedish (sv) update (Kevin Setterborn)
* Thai (Thailand) (th_TH) by Pattaraporn Tripiyaratana
* Vietnamese (vi) update (Đoàn Mỹ)
* Chinese (Taiwan) (zh_TW) by Benson



Flare v1.14 (https://flarerpg.org/2022/12/10/flare-1-14/)

Engine features:

* Added 'loot.requires_status' and 'status_loot' properties to loot table definitions.
* Support '/' as shorthand for 'exec' in the dev console. A space is not required after the slash.
* Added 'spawn_level' property to map enemies. This follows the same syntax as the Power property of the same name.
* Add XP scaling tables for scaling enemy reward XP based on enemy level.
* Replace 'immunity' effects with percentage-based resistances.
* Added 'mouse_move_deadzone' property to engine/misc.txt to help alleviate erratic mouse-move behavior when the cursor is near the player.
* Alternative tab UI for when tabs exceed the available space.
* Added keybind for cycling equipment sets in reverse.
* Refactored stats and stat bonuses to use floats for fractional values.
* Support fractional values in the following: